@@ -1,6 +1,6 @@
-.\"	$NetBSD: R2pkg.8,v 1.4 2017/07/18 18:44:06 wiz Exp $
+.\"	$NetBSD: R2pkg.8,v 1.5 2019/06/24 13:46:04 brook Exp $
 .\"
-.\" Copyright (c) 2014,2015,2016,2017
+.\" Copyright (c) 2014,2015,2016,2017,2018,2019
 .\"	Brook Milligan.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -38,6 +38,7 @@
 .Nm
 .Op Fl DehqruVv
 .Op Fl E Ar editor
+.Op Fl M Ar maintainer_email
 .Op Fl R Ar dependency_file
 .Op Ar package
 .Sh DESCRIPTION
@@ -105,6 +106,8 @@ instead of the user's default editor.
 Do not edit Makefile and DESCR.
 .It Fl h
 Produce a short help message.
+.It Fl M Ar maintainer_email
+Set the maintainer email address for any newly created packages.
 .It Fl q
 Do not produce status messages along the way.
 .It Fl R Ar dependency_file
@@ -182,6 +185,22 @@ package for the R package
 Remember to test the resulting package and remove any extra files
 created by
 .Nm .
+Adding
+.Fl r
+to the command line will also recursively create all necessary
+dependencies in the
+.Pa wip
+directory.
+.Pp
+Use the following commands to update a
+.Xr pkgsrc 7
+package (and dependencies) for the R package
+.Ar foo :
+.Dl cd pkgsrc/math/R-foo
+.Dl R2pkg -r -u
+Packages built for any new dependencies will be added to the
+.Pa wip
+directory.
 .Sh SEE ALSO
 .Xr pkgsrc 7
 .Sh AUTHORS
